--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,6 @@
 name: "tests"
 on:
-  pull_request:
-  push:
-    branches:
-      - main
-      - 'releases/*'
+  workflow_dispatch'
 
 jobs:
   # unit tests
